<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.shopping.NotificationsFragment" android:background="@android:color/white">
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/shopping_cart_item" android:id="@+id/recyclerShopping"
            app:layout_constraintBottom_toTopOf="@+id/textView" android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/text_button_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonEndPedido"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:backgroundTint="#4CAF50"
            android:fontFamily="@font/bungee" android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/label_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="11dp"
            app:layout_constraintBottom_toTopOf="@+id/totalComics" android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/mock_price_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/totalComics"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="11dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextCupom" android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextCupom"
            app:layout_constraintBottom_toTopOf="@+id/buttonEndPedido" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="11dp" android:layout_marginBottom="8dp" android:hint="@string/coupon"
            android:textAllCaps="true"/>
    <Button
            android:text="@string/text_button_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonApplyCupom"
            app:layout_constraintStart_toEndOf="@+id/editTextCupom" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginStart="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonEndPedido" android:background="#FFC107"
            android:fontFamily="@font/bungee" android:textColor="@android:color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>