<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.details.DetailsFragment"
        android:id="@+id/ScroolView">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.details.DetailsFragment"
            android:id="@+id/constraintLayout">
        <TextView
                android:text="@string/mock_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/comicDetailsPrice"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="@+id/comicDetailsText"
                app:layout_constraintTop_toBottomOf="@+id/comicDetailsText"
                android:fontFamily="sans-serif" android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/comicDetailsText" app:layout_constraintHorizontal_bias="0.0"
                android:textStyle="bold"/>
        <ImageView
                android:src="@drawable/comic_example"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:id="@+id/comicDetailsImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter" android:contentDescription="@string/mock_title"/>
        <TextView
                android:text="@string/mock_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/comicDetailsText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comicDetailsImage"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="28sp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black" android:layout_marginTop="16dp" android:textStyle="bold"/>
        <TextView
                android:text="@string/label_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/addToCartButton"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp" android:textStyle="bold"/>
        <TextView
                android:text="@string/mock_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/comicDetailsDescription"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"/>
        <Button
                android:text="@string/text_button_add_to_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/addToCartButton"
                android:backgroundTint="#F44336"
                android:fontFamily="@font/bungee"
                android:textColor="#FFFF"
                app:layout_constraintTop_toBottomOf="@+id/spinnerQuantBuy" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:layout_marginTop="24dp"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerQuantBuy"
                app:layout_constraintTop_toBottomOf="@+id/comicDetailsPrice"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:spinnerMode="dialog" app:layout_constraintEnd_toEndOf="@+id/comicDetailsPrice"
                app:layout_constraintHorizontal_bias="0.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

