<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.reccomendations.ReccomendationsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/label_xmen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView15"
                android:textSize="24sp" android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/recyclerIron"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:fontFamily="sans-serif" android:textStyle="bold" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/label_avengers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent" android:fontFamily="sans-serif" android:textStyle="bold"
                android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/label_captain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/recyclerAvengers"
                android:fontFamily="sans-serif" android:textStyle="bold" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/label_panther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/recyclerCaptain"
                android:fontFamily="sans-serif" android:textStyle="bold" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/label_iron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/recyclerSpider"
                android:fontFamily="sans-serif" android:textStyle="bold" android:layout_marginTop="16dp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="235dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:id="@+id/recyclerAvengers"
                tools:listitem="@layout/comic_item_horizontal"
        />
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="235dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:layout_marginTop="8dp"
                android:id="@+id/recyclerCaptain"
                tools:listitem="@layout/comic_item_horizontal"
        />
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="235dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/recyclerSpider"
                tools:listitem="@layout/comic_item_horizontal"
        />
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="235dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:id="@+id/recyclerIron"
                tools:listitem="@layout/comic_item_horizontal"
        />
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="235dp"
                app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp" android:id="@+id/recyclerXmen"
                tools:listitem="@layout/comic_item_horizontal"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>